--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -25,7 +25,6 @@
 }
 
 #nav-bar .button {
-  display: inline-block;
   float: right;
   position: relative;
   top: 50%;
